[gd_scene load_steps=9 format=3 uid="uid://c3vc7i7acbtxb"]

[ext_resource type="Script" path="res://Scripts/Menu.gd" id="1_uhuwb"]
[ext_resource type="FontFile" uid="uid://c0c4myavfhko0" path="res://Fonts/ZeroCool.otf" id="2_jg4ew"]
[ext_resource type="PackedScene" uid="uid://df6782cwru7" path="res://Scenes/parallax_background.tscn" id="3_vlgqp"]
[ext_resource type="AudioStream" uid="uid://lns0awibxvkj" path="res://Sounds/pulsaBoton.mp3" id="4_61aol"]
[ext_resource type="AudioStream" uid="uid://mgi4bie4m78d" path="res://Sounds/interfazSonido.mp3" id="5_lklq2"]
[ext_resource type="AudioStream" uid="uid://3smjlv48x1k1" path="res://Sounds/optime mapa.mp3" id="6_58aum"]
[ext_resource type="PackedScene" uid="uid://ecdkkp64u7mx" path="res://Scenes/popupSettings.tscn" id="6_dcbpp"]
[ext_resource type="PackedScene" uid="uid://1dqe0g45rivi" path="res://Scenes/popupMap.tscn" id="7_1y8mg"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 5.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uhuwb")

[node name="Label" type="Label" parent="."]
layout_mode = 2
offset_left = 182.0
offset_top = 35.0
offset_right = 970.0
offset_bottom = 268.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_jg4ew")
theme_override_font_sizes/font_size = 100
text = "La venganza de
las sobras"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = 441.0
offset_top = 276.0
offset_right = 707.0
offset_bottom = 474.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 10

[node name="Jugar" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_jg4ew")
theme_override_font_sizes/font_size = 30
text = "Jugar"

[node name="Ajustes" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_jg4ew")
theme_override_font_sizes/font_size = 30
text = "Ajustes"

[node name="Salir" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_jg4ew")
theme_override_font_sizes/font_size = 30
text = "Salir
"

[node name="ParallaxBackground" parent="." instance=ExtResource("3_vlgqp")]

[node name="Sonidos" type="Node2D" parent="." groups=["Sonidos"]]

[node name="Click" type="AudioStreamPlayer2D" parent="Sonidos"]
stream = ExtResource("4_61aol")
bus = &"SFX"

[node name="Fondo" type="AudioStreamPlayer2D" parent="Sonidos"]
stream = ExtResource("5_lklq2")
autoplay = true
bus = &"Music"

[node name="SelectMap" type="AudioStreamPlayer2D" parent="Sonidos"]
stream = ExtResource("6_58aum")
bus = &"SFX"

[node name="Popup" parent="." instance=ExtResource("6_dcbpp")]
visible = false

[node name="Popup2" parent="." instance=ExtResource("7_1y8mg")]
position = Vector2i(70, 50)
visible = false

[connection signal="mouse_entered" from="VBoxContainer/Jugar" to="." method="_on_jugar_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Jugar" to="." method="_on_jugar_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Ajustes" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Ajustes" to="." method="_on_button_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Salir" to="." method="_on_salir_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Salir" to="." method="_on_salir_pressed"]
